@@ -1,3 +1,12 @@
+2014-05-05  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/ReconServer.pm: Added debug messages.
+
+	* util/recon_scripts/wmi-recon.pl: Added to repository. WMI Recon script.
+
+	* lib/PandoraFMS/WMIServer.pm,
+	  util/recon_scripts/snmp-recon.pl: Small fixes.
+
 2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>
 
 	* bin/pandora_server: Added checks and warnings for
